--- a/style.css
+++ b/style.css
@@ -27,12 +27,28 @@
   --weight-regular: 400;
 
   /* Size */
-
+  --size-border-radius: 4px;
 }
 
 /* Universal tags */
 * {
   box-sizing: border-box; 
+}
+
+body {
+  margin: 0;
+  font-family: 'Open Sans', sans-serif;
+  cursor: default;
+}
+
+a {
+  text-decoration: none;
+  color: var(--color-white);
+}
+
+ul {
+  list-style: none;
+  padding-left: 0;
 }
 
 /* Typography */
@@ -62,4 +78,46 @@ p {
   font-weight: var(--weight-regular);
   color: var(--color-black);
   margin: 4px 0px;
+}
+
+/* Navbar */
+#navbar {
+  display: flex;
+  justify-content: space-between; /* 중심축 정렬 */
+  align-items: center;
+  background-color: pink;
+  color: var(--color-white);
+  position: sticky;
+  padding: 16px;
+}
+
+.navbar__logo {
+  font-size: var(--font-medium);
+  font-weight: var(--weight-semi-bold);
+  display: flex;
+}
+
+.navbar__logo__icon {
+  width: 45px;
+  height: 45px;;
+  margin-right: 5px;
+}
+
+.navbar__menu {
+  display: flex;  
+}
+
+.navbar__menu__item {
+  padding: 8px 12px;
+  margin: 0 4px;
+  cursor: pointer;
+  border-radius: var(--size-border-radius);
+}
+
+.navbar__menu__item.active {
+  border: 1px solid var(--color-light-white);
+}
+
+.navbar__menu__item:hover {
+  background-color: var(--color-dark-pink);
 }
