--- a/style.css
+++ b/style.css
@@ -51,6 +51,13 @@ ul {
   padding-left: 0;
 }
 
+button {
+  background-color: transparent;
+  cursor: pointer;
+  border: none;
+  outline: none;
+}
+
 /* Typography */
 h1 {
   font-size: var(--font-large);
@@ -120,4 +127,36 @@ p {
 
 .navbar__menu__item:hover {
   background-color: var(--color-dark-pink);
+}
+
+/* Home */
+
+#home {
+  background: url(imgs/background02.png) center/cover no-repeat; /* center에 두고, cover 반응형으로 no-repeat 반복x*/
+  padding: 40px;
+  text-align: center;
+  /* display: flex;
+  align-items: center;
+  flex-direction: column; */
+}
+
+.home__avatar {
+  width: 250px;
+  height: 250px;
+  border: 2px solid var(--color-light-white);
+  border-radius: 50%;
+}
+
+.home__title, .home__descrition {
+  color: var(--color-white);
+}
+
+.home__contact {
+  font-size: var(--font-regular);
+  font-weight: var(--weight-bold);
+  color: var(--color-white);
+  padding: 8px 12px;
+  margin: 24px;
+  border: 2px solid var(--color-white);
+  border-radius: var(--size-border-radius);
 }
