--- a/style.css
+++ b/style.css
@@ -28,6 +28,9 @@
 
   /* Size */
   --size-border-radius: 4px;
+
+  /* Animation */
+  --animation-duration: 300ms;
 }
 
 /* Universal tags */
@@ -159,4 +162,88 @@ p {
   margin: 24px;
   border: 2px solid var(--color-white);
   border-radius: var(--size-border-radius);
+}
+
+/* Section common */
+.section {
+  text-align: center;
+  padding: 50px;
+  max-width: 1200px;
+  margin: auto;
+}
+
+/* About */
+
+#about {
+  /* text-align: center; */
+  /* margin: 40px 100px;   */
+}
+
+#about>p {
+  font-size: var(--font-micro);
+}
+
+.about__majors {
+  display: flex;
+  justify-content: space-between;
+  margin: 80px 0;
+}
+
+.major {
+  /* display: flex;
+  flex-direction: column;
+  align-items: center; */
+  /* flex를 사용하는대신에 .major__icon에 margin: auto를 준다 */
+}
+
+.major__icon {
+  width: 170px;
+  height: 170px;
+  font-size: 70px;
+  line-height: 170px;
+  border: 2px solid var(--color-blue);
+  border-radius: 50%;
+  margin: auto;
+  margin-bottom: 16px;
+  color: var(--color-blue);
+}
+
+.major__title, .major__description {
+  color: var(--color-dark-gray);
+}
+
+.major__description {
+  font-size: var(--font-small);
+}
+
+.major__icon i {
+  transition: all var(--animation-duration) ease;
+}
+
+.major__icon:hover i {
+  color: var(--color-pink);
+  transform: rotate(-30deg) scale(1.1);
+}
+
+.jobs {
+  display: flex;
+  align-items: center;
+}
+
+.job__description p {
+  margin: 0 16px;
+  text-align: left;
+  color: var(--color-light-gray);
+}
+
+.jobs__name {
+  font-size: var(--font-small);
+}
+
+.jobs__period {
+  font-size: var(--font-micro);
+}
+
+.jobs__logo {
+  width: 70px;
 }
