--- a/style.css
+++ b/style.css
@@ -168,20 +168,15 @@ p {
 .section {
   text-align: center;
   padding: 50px;
+  margin: auto;
+}
+
+.section__container {
   max-width: 1200px;
   margin: auto;
 }
 
 /* About */
-
-#about {
-  /* text-align: center; */
-  /* margin: 40px 100px;   */
-}
-
-#about>p {
-  font-size: var(--font-micro);
-}
 
 .about__majors {
   display: flex;
@@ -246,4 +241,74 @@ p {
 
 .jobs__logo {
   width: 70px;
+}
+
+/* Skills */
+
+#skills {
+  background-color: var(--color-yellow);
+}
+
+.skillset {
+  display: flex;
+  background-color: var(--color-light-gray);
+  color: var(--color-light-white);
+  margin: 20px 0;
+}
+
+.skillset__title {
+  color: var(--color-white);
+}
+
+.skillset__left {
+  flex-basis: 60%;
+  background-color: var(--color-dark-gray);
+  justify-content: left;
+  padding: 20px 40px;
+}
+
+.skill {
+  margin-bottom: 32px;
+}
+
+.skill_description {
+  display: flex;
+  justify-content: space-between;
+}
+
+.skill__bar {
+  width: 100%;
+  height: 3px;
+  background-color: var(--color-gray);
+}
+
+.skill__value {
+  /* width: 90%; */ /* width는 css에서 정의하는 것이 아님, html태그에서 정의, 이런 data들은 JSON에서 동적으로 받아온 데이터를 html코드로 변환해서 자동적으로 생성 할 것이다. */
+  height: 3px;
+  background-color: var(--color-orange);
+}
+
+.skillset__right {
+  flex-basis: 40%;
+}
+
+.tools {
+  background-color: var(--color-gray);
+  margin-top: 0;
+}
+
+.tools, .etc {
+  padding: 20px;
+}
+
+.project__img {
+  width: 200px;
+}
+
+.testimonials__img {
+  width: 100px;
+}
+
+.contact__link {
+  color: var(--color-blue);
 }
