--- a/style.css
+++ b/style.css
@@ -301,8 +301,103 @@ p {
   padding: 20px;
 }
 
+/* Work */
+
+.work__categories {
+  margin: 40px;
+}
+
+.categories__btn {
+  border: 1px solid var(--color-dark-white);
+  border-radius: var(--size-border-radius);
+  font-size: var(--font-regular);
+  padding: 8px 48px;
+}
+
+.categories__btn.active,
+.categories__btn:hover {
+  background-color: var(--color-dark-pink);
+  color: var(--color-white);
+}
+
+.categories__btn.active .category__count,
+.categories__btn:hover .category__count {
+  opacity: 1;
+  top: 0;
+}
+
+.category__count {
+  background-color: var(--color-orange);
+  border-radius: 50%;
+  color: var(--color-white);  
+  display: inline-block;
+  width: 24px;
+  height: 24px;
+  line-height: 24px;
+  margin-left: 5px;
+  position: relative; /* 평소에는 보이지 않다가 마우스가 올라가거나 active가 있으면 밑으로 내려가게 할 것이다. */
+  top: -20px;
+  left: 4px;
+  opacity: 0;
+  transition: all var(--animation-duration) ease;
+}
+
+.work__projects {
+  display: flex;
+  flex-wrap: wrap; /* item들이 꽉 차면 자동으로 줄바꿈되도록 설정 */
+  justify-content: center;
+}
+
+.project {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+  margin: 2px;
+  width: 220px;
+  height: 280px;
+  /* background-color: var(--color-light-white); */
+}
+
 .project__img {
-  width: 200px;
+  max-width: 100%;
+  max-height: 100%;
+}
+
+.project__description {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  position: absolute;
+  background-color: var(--color-black);
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  opacity: 0;
+  transform: translateY(10px);
+  transition: all var(--animation-duration) ease-in;
+}
+
+.project:hover .project__description {
+  transform: translateY(0px);
+  opacity: 0.8;
+}
+
+.project__description h3 {
+  color: var(--color-white);
+}
+
+.project__description h3::after {
+  content: '';
+  width: 25px;
+  height: 2px;
+  background-color: var(--color-dark-white);
+  display: block;
+  position: relative;
+  left: 50%;
+  margin-left: -12px;
+  margin-top: 8px;
 }
 
 .testimonials__img {
