--- a/style.css
+++ b/style.css
@@ -439,5 +439,33 @@ p {
 }
 
 .testimonial__speech-bubble a {
-  color: var(--color-pink);;
+  color: var(--color-pink);
+}
+
+/* Contack */
+
+#contact {
+  background-color: var(--color-pink);
+}
+
+.contact__title,
+.contact__email,
+.contact__rights {
+  color: var(--color-white);
+}
+
+.contact__title {
+  margin: 32px 0;
+}
+
+.contact__link {
+  font-size: var(--font-medium);
+  font-size: var(--font-large);
+  margin: 24px 0;
+}
+
+.contact__link i:hover {
+  transition: all var(--animation-duration) ease;
+  transform: rotate(-20deg) scale(1.1);
+  color: var(--color-yellow);
 }
