--- a/style.css
+++ b/style.css
@@ -98,6 +98,7 @@ p {
   background-color: pink;
   color: var(--color-white);
   position: sticky;
+  top: 0;
   padding: 16px;
 }
 
@@ -114,7 +115,7 @@ p {
 }
 
 .navbar__menu {
-  display: flex;  
+  display: flex;
 }
 
 .navbar__menu__item {
@@ -124,12 +125,17 @@ p {
   border-radius: var(--size-border-radius);
 }
 
-.navbar__menu__item.active {
-  border: 1px solid var(--color-light-white);
-}
-
 .navbar__menu__item:hover {
   background-color: var(--color-dark-pink);
+}
+
+.navbar__toggle-btn {
+  position: absolute; /* 기존 자리에서 빠져나와 position이 되는 것 */
+  top: 25px;
+  right: 32px;
+  font-size: 24px;
+  color: var(--color-white);
+  display: none;
 }
 
 /* Home */
@@ -468,4 +474,23 @@ p {
   transition: all var(--animation-duration) ease;
   transform: rotate(-20deg) scale(1.1);
   color: var(--color-yellow);
+}
+
+/* For below 768px screen width */
+@media screen and (max-width: 768px) {
+  .navbar__toggle-btn {
+    display: block;
+  }
+
+  #navbar {
+    flex-direction: column;
+    align-items: flex-start;
+  }
+
+  .navbar__menu {
+    flex-direction: column;
+    text-align: center;
+    width: 100%;
+    display: none;
+  }
 }
