--- a/style.css
+++ b/style.css
@@ -92,14 +92,20 @@ p {
 
 /* Navbar */
 #navbar {
+  position: fixed;
+  width: 100%;
   display: flex;
   justify-content: space-between; /* 중심축 정렬 */
   align-items: center;
-  background-color: pink;
+  background-color: transparent;
   color: var(--color-white);
-  position: sticky;
-  top: 0;
   padding: 16px;
+  transition: all var(--animation-duration) ease-in-out;
+}
+
+#navbar.navbar--dark {
+  background-color: var(--color-pink);
+  padding: 8px;
 }
 
 .navbar__logo {
@@ -125,6 +131,11 @@ p {
   border-radius: var(--size-border-radius);
 }
 
+.navbar__menu__item.active {
+  border: 1px solid white;
+  border-radius: var(--size-border-radius);
+}
+
 .navbar__menu__item:hover {
   background-color: var(--color-dark-pink);
 }
@@ -143,6 +154,7 @@ p {
 #home {
   background: url(imgs/background02.png) center/cover no-repeat; /* center에 두고, cover 반응형으로 no-repeat 반복x*/
   padding: 40px;
+  padding-top: 120px;
   text-align: center;
   /* display: flex;
   align-items: center;
