--- a/style.css
+++ b/style.css
@@ -365,6 +365,13 @@ p {
   display: flex;
   flex-wrap: wrap; /* item들이 꽉 차면 자동으로 줄바꿈되도록 설정 */
   justify-content: center;
+  opacity: 1;
+  transition: all var(--animation-duration) ease-out;
+}
+
+.work__projects.animation-out {
+  opacity: 0.5;
+  transform: scale(0.96) translateY(40px);
 }
 
 .project {
@@ -378,6 +385,9 @@ p {
   /* background-color: var(--color-light-white); */
 }
 
+.project.invisible{
+  display: none;
+}
 .project__img {
   max-width: 100%;
   max-height: 100%;
