--- a/style.css
+++ b/style.css
@@ -129,15 +129,13 @@ p {
   padding: 8px 12px;
   margin: 0 4px;
   cursor: pointer;
-  border-radius: var(--size-border-radius);
-}
-
-.navbar__menu__item.active {
-  border: 1px solid white;
+  color: var(--color-white);
+  border: 1px solid transparent; /* 평소에는 안 보이게  transparent 설정 */
   border-radius: var(--size-border-radius);
 }
 
 .navbar__menu__item:hover {
+  border-color: var(--color-white);
   background-color: var(--color-dark-pink);
 }
 
@@ -326,21 +324,21 @@ p {
   margin: 40px;
 }
 
-.categories__btn {
+.category__btn {
   border: 1px solid var(--color-dark-white);
   border-radius: var(--size-border-radius);
   font-size: var(--font-regular);
   padding: 8px 48px;
 }
 
-.categories__btn.active,
-.categories__btn:hover {
+.category__btn.selected,
+.category__btn:hover {
   background-color: var(--color-dark-pink);
   color: var(--color-white);
 }
 
-.categories__btn.active .category__count,
-.categories__btn:hover .category__count {
+.category__btn.selected .category__count,
+.category__btn:hover .category__count {
   opacity: 1;
   top: 0;
 }
